Updated for Killercoda.com labs

--- a/site.yaml
+++ b/site.yaml
@@ -1,1 +1,9 @@
-s
+- hosts: all
+  gather_facts: true
+  vars:
+  tasks:
+
+  roles:
+  - { role: nfs_server, when: type == "server" }
+  - { role: nfs_client, when: type == "client" }
+  
