--- a/03_package_update_or_install.yaml
+++ b/03_package_update_or_install.yaml
@@ -5,5 +5,6 @@
 
   roles:
   - { role: packages_install, when: action == "install" }
+  - { role: fact_push, when: action == "install" }
   - { role: packages_update, when: action == "update" }
   
