Updated the patching

--- a/04_enterprise_patching.yaml
+++ b/04_enterprise_patching.yaml
@@ -5,8 +5,9 @@
 
   roles:
   - precheck
-  - patch
   - { role: fact_push, when: ansible_local.patching.rebooting == "true" }
+  - patch
+  - reboot
   - server_validation
   - app_validation
   - { role: report, when: report | default(false) == "true" }
