--- a/roles/app_validation/tasks/main.yml
+++ b/roles/app_validation/tasks/main.yml
@@ -1,11 +1,11 @@
 - name: Check apache if web server is running
-  ansible.builtin.command: ps -ef | grep httpd
+  shell: 'ps -ef | grep [a]pache'
   register: apache_status
   changed_when: false
   when: ansible_local.patching.webserver == 'true'
 
 - name: check database if database server is running
-  ansible.builtin.command: ps -ef | grep mysqld
+  shell: 'ps -ef | grep [m]ysql'
   register: mysql_status
   changed_when: false
   when: ansible_local.patching.database == 'true'
